<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HAB Tracker</string>

    <!-- Menu labels -->
    <string name="menu_settings">Settings</string>
    <string name="menu_monitor">Packet monitor</string>
    <string name="menu_navigate_to_landing">Navigate to landing</string>
	<string name="menu_pan_to_balloon">Pan to balloon</string>
	<string name="menu_flight_panel">Flight panel</string>
    <string name="menu_more">More...</string>

	<!-- Preference items -->
    <string name="pref_cat_aprs">APRS</string>
    <string name="pref_title_connect">Connect</string>
    <string name="pref_summary_connect">Get data from the APRS network</string>
    <string name="pref_title_callsign">Callsign</string>
    <string name="pref_title_aprslog_server">APRS-Log server</string>
    <string name="pref_summary_callsign">Callsign-SSID to be tracked</string>
    <string name="pref_title_clean_database">Clear packets log</string>
    <string name="pref_summary_clean_database">Click before a new flight</string>
    <string name="pref_title_launch_time">Launch date/time</string>
	<string name="pref_summary_launch_time">Only watch packets after this date/time</string>
    <string name="pref_title_poll_interval">APRS poll interval</string>
    <string name="pref_cat_flight">Flight info</string>
    <string name="pref_title_units">Unit system</string>
    <string name="pref_title_ascent_rate">Ascent rate</string>
    <string name="pref_title_descent_rate">Descent rate</string>
	<string name="pref_title_burst_altitude">Burst altitude</string>
	<string name="pref_title_launch_altitude">Launch altitude</string>
	<string name="pref_cat_other">Other settings</string>
	<string name="pref_title_reset_defaults">Reset default settings</string>
	<string name="unit_vertical_rate_imperial">ft/min</string>
	<string name="unit_vertical_rate_metric">m/min</string>
	<string name="unit_space_imperial">ft</string>
	<string name="unit_space_metric">m</string>
	<string name="not_set">Not set</string>
	
	<!--  Activity names -->
	<string name="settings_activity">Settings</string>
	<string name="monitor_activity">Packet Monitor</string>
	<string name="browser_activity">Winds browser</string>
	<string name="noaa_activity">Get NOAA sounding winds</string>

	<!--  Context menus -->
	<string name="menu_get_sounding_winds">Get sounding winds</string>
	<string name="menu_predict_from_here">Predict from here</string>
	<string name="menu_navigate_here">Navigate here</string>
	<string name="menu_google_map_this">Google map this</string>
	
	<!--  NOAA activity texts -->	
	<string name="text_noaa_model">Select prediction model</string>
	<string name="text_noaa_forecast_cycle">Select forecast cycle</string>
	<string name="text_noaa_launch_time">Select launch time</string>
	<string name="text_noaa_captcha">Answer the Turing Test below:</string>
	<string name="text_noaa_get_sounding">Get sounding</string>
	<string name="text_noaa_connection_error">Connection error</string>
	
	<!--  Notification messages -->
	<string name="notification_running">Payload is running - Touch to configure</string>
	<string name="notification_waiting">Waiting for APRS data</string>
	<string name="notification_last_packet">Last packet:</string>
	<string name="notification_error">Error:</string>
	
</resources>
